--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,10 +29,13 @@ dependencies {
     implementation "com.android.support:recyclerview-v7:$android_support"
     implementation "com.android.support:cardview-v7:$android_support"
     implementation "com.android.support.constraint:constraint-layout:$constraint_layout"
+
+    implementation "android.arch.lifecycle:extensions:$android_arch"
+
     implementation "com.andkulikov:transitionseverywhere:1.7.8"
 
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    implementation 'io.reactivex.rxjava2:rxjava:2.1.7'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.8'
     implementation 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
     implementation "com.trello.rxlifecycle2:rxlifecycle:$rxlifecycle"
     implementation "com.trello.rxlifecycle2:rxlifecycle-android:$rxlifecycle"
@@ -42,13 +45,20 @@ dependencies {
     implementation "com.google.dagger:dagger:$dagger"
     implementation "com.google.dagger:dagger-android:$dagger"
     implementation "com.google.dagger:dagger-android-support:$dagger"
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     kapt "com.google.dagger:dagger-compiler:$dagger"
     kapt "com.google.dagger:dagger-android-processor:$dagger"
 
     implementation "com.squareup.retrofit2:retrofit:$retrofit"
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit"
+
+    implementation "com.google.android.gms:play-services-base:$play_services"
+    implementation "com.google.android.gms:play-services-places:$play_services"
+    implementation "com.google.android.gms:play-services-maps:$play_services"
+
+    implementation "org.jetbrains.anko:anko-commons:$anko"
+
+    implementation 'com.alexfacciorusso:daggerviewmodel:0.1.2'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
