--- a/build.gradle
+++ b/build.gradle
@@ -3,12 +3,15 @@
 buildscript {
     ext{
         //kotlin_version = '1.1.51'
-        kotlin_version = '1.2.10'
+        kotlin_version = '1.2.30'
         android_support = '27.0.2'
+        android_arch = '1.1.1'
         constraint_layout = '1.0.2'
         dagger = "2.13"
         retrofit = "2.3.0"
         rxlifecycle = "2.2.1"
+        play_services = "11.8.0"
+        anko = "0.10.4"
     }
 
     repositories {
